dockerfile updated
